# tracelog

./: .claudeignore  .gitignore  CLAUDE.md  README.md  main.py  pyproject.toml
.claude/: settings.json
.claude/agents/: ai-engineer.md  software-engineer.md  system-architect.md
.claude/commands/: doc-check.md  status.md
.claude/rules/: langchain-conventions.md  plan-logging.md
.dev/logs/: 2026-04-11_readme-rewrite.md  2026-04-17_benchmark-v3-framework.md  2026-04-17_benchmark-v3-scenarios.md  2026-04-17_thread-pool-flush-fix.md  2026-04-17_thread-pool-flush-redesign.md  2026-04-18_rag-agent-design.md  2026-04-18_rag-interactive-demo.md
.tracelog/chunks/: chunk_4398365536_1772700687852900000.pkl  chunk_4401419152_1772700687861869000.pkl  (+6 more)
docs/: system_architecture.md
docs/eval/: test_plan.md  (+2 more)
examples/: basic_usage.py  custom_exporter_usage.py  file_exporter_usage.py  multithreaded_usage.py  rag_pipeline_usage.py
infra/: colima-start.sh  docker-compose.yml
scripts/: rag_repl.py  run_benchmark_v3_2.py  run_benchmark_v3_2_anthropic_retry.py  run_benchmark_v3_2_google_producer_retry.py  run_benchmark_v3_2_google_retry.py  run_benchmark_v3_2_remaining.py  seed_rag_demo.py  test_agent_live.py
tests/: test_agent.py  test_aggregator.py  test_benchmark_v2_lc.py  test_buffer.py  test_context.py  test_context_propagation.py  test_exporter.py  test_handler.py  test_instrument.py  test_postmortem_indexer.py  test_rag.py  test_splitter.py  test_trace_fmt.py
tracelog/: __init__.py  buffer.py  cli.py  context.py  core.py  exporter.py  handler.py  instrument.py
(+367 files in other folders)
