[project]
name = "tracelog"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain>=0.3.0",
    "langchain-openai>=1.1.10",
    "langchain-qdrant>=1.1.0",
    "matplotlib>=3.10.8",
    "numpy>=2.4.2",
    "pandas>=3.0.1",
    "python-dotenv>=1.2.2",
    "qdrant-client>=1.17.0",
    "scikit-learn>=1.8.0",
    "tiktoken>=0.12.0",
]

[project.scripts]
tracelog = "tracelog.cli:main"

[dependency-groups]
dev = [
    "einops>=0.8.2",
    "huggingface-hub>=1.5.0",
    "ipykernel>=7.2.0",
    "jupyter>=1.1.1",
    "langchain-huggingface>=1.2.1",
    "langchain-text-splitters>=1.1.1",
    "notebook>=7.5.4",
    "pytest>=9.0.3",
    "sentence-transformers>=5.2.3",
    "transformers>=5.3.0",
]
